# chipbox

./: build.gradle
app/src/main/cpp/usf/: CMakeLists.txt  audio.c  audio.h  audiolib.c  audiolib.h  cpu.c  cpu.h  cpu_hle.c  cpu_hle.h  dma.c  dma.h  exception.c  exception.h  interpreter_cpu.c  interpreter_cpu.h  interpreter_ops.c  interpreter_ops.h  main.c  main.h  memory.c  memory.h  opcode.h  os.c  os.h  pif.c  pif.h  registers.c  registers.h  tlb.c  tlb.h  types.h  usf.c  usf.h  usf_internal.h
app/src/main/cpp/usf/android/: Backend.cpp
app/src/main/cpp/usf/rsp/: bench.c  execute.h  matrix.h  rsp.c  rsp.h  su.h
app/src/main/cpp/usf/rsp/vu/: cf.h  clamp.h  divrom.h  shuffle.h  vabs.h  vadd.h  vaddc.h  vand.h  vch.h  vcl.h  vcr.h  veq.h  vge.h  vlt.h  vmacf.h  vmacq.h  vmacu.h  vmadh.h  vmadl.h  vmadm.h  vmadn.h  vmov.h  vmrg.h  vmudh.h  vmudl.h  vmudm.h  vmudn.h  vmulf.h  vmulu.h  vnand.h  vne.h  vnop.h  vnor.h  vnxor.h  vor.h  vrcp.h  vrcph.h  vrcpl.h  vrsq.h  vrsqh.h  (+6 more)
app/src/main/cpp/usf/rsp_hle/: alist.c  audio.h  hle.c  plugin.c
app/src/main/res/drawable/: bg_launcher.xml
gradle/wrapper/: gradle-wrapper.properties
